web/public/stylesheets/scaffold.css
body {
    margin: 0;
    background-color: #fff;
    color: #333;
}

body, p, ol, ul, td {
  font-family: verdana, arial, helvetica, sans-serif;
  font-size:   13px;
  line-height: 18px;
}

pre {
  background-color: #eee;
  padding: 10px;
  font-size: 11px;
}

a { color: #000; }
a:visited { color: #666; }
a:hover { color: #fff; background-color:#000; }

.fieldWithErrors {
  padding: 2px;
  background-color: red;
  display: table;
}

#errorExplanation {
  width: 400px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 12px;
  margin-bottom: 20px;
  background-color: #f0f0f0;
}

#errorExplanation h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: -7px;
  background-color: #c00;
  color: #fff;
}

#errorExplanation p {
  color: #333;
  margin-bottom: 0;
  padding: 5px;
}

#errorExplanation ul li {
  font-size: 12px;
  list-style: square;
}

#repository {
  padding: 1em;
  background-color: #ccffcc;
  border: 1px solid #33ff99;
  margin-top: 1em;
  margin-bottom: 1em;
}

.commit {
  padding: 1em;
  background-color: #FFFFCC;
  border: 1px solid #FFFF66;
}

#header {
  border-bottom: 1px solid #66ccff;
}

#main {
    height: auto !important;
    margin: 1em;
}

#footer {
  height: 1.4em;
  clear: both;
  bottom: 0px;
  width: 100%;
  position: fixed;
  border-top: 1px solid #66ccff;
}

#footer, #header {
  padding: .25em .5em;
  background-color: #ccffff;
}

#main .list-line-even {
#background:   #e0f8f8;
}

#main .list-line-odd {
#background:   #f8b0f8;
}

